--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         </div>
         <div id="header-background-right"></div>
       </div>
+      <nav>
+        <a href="index.html" class="active">Home</a>
+        <a href="Discovery_Flashcards.html">Discovery Flashcards</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </header>
   </body>
 </html>
