Add main content to home page

--- a/index.html
+++ b/index.html
@@ -29,5 +29,31 @@
         <a href="contact.html">Contact</a>
       </nav>
     </header>
+
+    <h1>Welcome to Discovery Byte Software</h1>
+    <section>
+      <p>On this site you will find the following free software:</p>
+      <article>
+        <h2>
+          <a href="Discovery_Flashcards.html">Discovery Flashcards</a>
+          (currently version 2.2)
+        </h2>
+        <p>
+          Discovery Flashcards is a unique free program that can help you study.
+          It has many great features. The program is designed to be simple and
+          easy to use. If you would like to see updates or additional features
+          please use visit fill out the
+          <a href="contact.html">contact form</a> or send an email.
+        </p>
+      </article>
+    </section>
+
+    <footer>
+      <span>Copyright © 2019 Discovery Byte.</span>
+      <a href="index.html">Home</a>
+      <a href="Discovery_Flashcards.html">Discovery Flashcards</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </footer>
   </body>
 </html>
