Add content to about page Fix footer links (added Back to Top and removed Discovery Flashcards) Fixed color of current version in index.html

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>
+    <header id="top">
       <div id="header-background-container">
         <div id="header-background-left">
           <img
@@ -30,15 +30,54 @@
       </nav>
     </header>
 
-    <h1>About page</h1>
-    <p>This page is currently under construction. Please check back later.</p>
+    <h1>Information About Discovery Byte</h1>
+    <p>
+      Discovery Byte is a company devoted to creating free programs. Discovery
+      Byte is here to support our customers at all times. Currently the only
+      program that is available to the public is Discovery Flashcards.
+    </p>
+
+    <h2>Links to other great websites</h2>
+    <p class="red-text">These links will open in a new tab or window</p>
+    <ul>
+      <li>
+        <a href="http://www.freewarefiles.com" target="_blank"
+          >FreewareFiles.com</a
+        >
+        - A collectionsw of free software in many different categories.
+      </li>
+      <li>
+        <a href="http://www.freedownloadaday.com" target="_blank"
+          >FreeDownloadaDay.com</a
+        >
+        - Provides information on freeware applications. One application per day
+        every day.
+      </li>
+      <li>
+        <a href="http://www.giveawayoftheday.com" target="_blank"
+          >GiveawayOfTheDay.com</a
+        >
+        - Free downloads of software that would normally cost money. Not a
+        contest, just software at a great price, free!
+      </li>
+      <li>
+        <a href="http://www.emailmeform.com" target="_blank">EmailMeForm.com</a>
+        - A great resource to add an email form to your website. Doesn't need
+        scripts on your site, it is done on their servers. See the
+        <a href="contact.html" target="_blank">contact page</a> for an example!
+      </li>
+      <li>
+        <a href="http://www.imgburn.com" target="_blank">ImgBurn.com</a> - One
+        of the best CD/DVD burning programs available, and it is free!
+      </li>
+    </ul>
 
     <footer>
       <span>Copyright © 2019 Discovery Byte.</span>
       <a href="index.html">Home</a>
-      <a href="Discovery_Flashcards.html">Discovery Flashcards</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
+      <a href="#top">Back to Top</a>
     </footer>
   </body>
 </html>
