--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>
+    <header id="top">
       <div id="header-background-container">
         <div id="header-background-left">
           <img
@@ -36,9 +36,9 @@
     <footer>
       <span>Copyright © 2019 Discovery Byte.</span>
       <a href="index.html">Home</a>
-      <a href="Discovery_Flashcards.html">Discovery Flashcards</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
+      <a href="#top">Back to Top</a>
     </footer>
   </body>
 </html>
