Initial completion of contact page

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,70 @@
       </nav>
     </header>
 
-    <h1>Contact page</h1>
-    <p>This page is currently under construction. Please check back later.</p>
+    <h1>Contact Discovery Byte</h1>
+    <p>
+      Discoverty Byte Software offers free support for all of our software
+      titles. Please send your message via email at the address below or use the
+      contact form below (make sure to type a valid email address if you need an
+      answer). Suggestions or bug reports are always welcome. After sending your
+      inquiry, please allow 3 buisiness days to receive a response if you
+      provided an email address. If you do not receive an answer for your
+      probelm in the mentioned time, please be sure to check your span folders.
+      Usually email spam filters block messages from unknown addresses. Also,
+      occasionally I am unable to check my email for longer periods of time.
+    </p>
+    <p>
+      If you would like to be notified when a new version of a program is
+      released, then fill in your email address. In the message field, put
+      'Subscribe to Program Updates'. If you only want updated for a certain
+      program, then be sure to mention the program name in the message. You can
+      unsubscibe at any time by responding to an email with a mesage letting me
+      know, or you can use the form below with 'Unsubscribe' in the message
+      field.
+    </p>
+    <p>
+      If you wish to send a bug report for one of the programs, then please
+      include the program name, its version number, and your operating system
+      version in your message.
+    </p>
+    <p>
+      If you are uploading an error log file, then please us the attach file
+      box.
+    </p>
+
+    <img src="images/DBemail.png" alt="Discovery Byte email address" />
+
+    <!--Email Me Form code between this comment and the footer-->
+    <iframe
+      width="100%"
+      height="644"
+      allowTransparency="true"
+      frameborder="0"
+      scrolling="no"
+      style="border:none"
+      src="https://www.emailmeform.com/builder/embed/bc59zKYeaGhF7mqe9JSbc44"
+      ><a
+        href="https://www.emailmeform.com/builder/embed/bc59zKYeaGhF7mqe9JSbc44"
+        >Fill out form.</a
+      ></iframe
+    >
+    <div style="margin-top:18px;text-align:left">
+      <div id="emf_advertisement">
+        <font face="Verdana" size="2" color="#000000">Powered by</font
+        ><span style="position: relative; padding-left: 3px; bottom: -5px;"
+          ><img
+            src="//assets.emailmeform.com/images/footer-logo.png?cmVsZWFzZS8yLjQzLjc%3D"/></span
+        ><font face="Verdana" size="2" color="#000000">EMF </font
+        ><a
+          style="text-decoration:none;"
+          href="https://www.emailmeform.com/"
+          target="_blank"
+          ><font face="Verdana" size="2" color="#000000"
+            >HTML Contact Form</font
+          ></a
+        >
+      </div>
+    </div>
 
     <footer>
       <span>Copyright © 2019 Discovery Byte.</span>
