--- a/Discovery_Flashcards.html
+++ b/Discovery_Flashcards.html
@@ -32,8 +32,128 @@
       </nav>
     </header>
 
-    <h1>Discovery Flashcards page</h1>
-    <p>This page is currently under construction. Please check back later.</p>
+    <h1>Discovery Flashcards</h1>
+    <p>
+      Discovery Flashcards is a unique free program that can help you study. It
+      has many great features. The program is designed to be simple and easy to
+      use. This program has been reviewed by
+      <a
+        href="https://listoffreeware.com/free-printable-flashcard-maker-software-windows/"
+        >listoffreeware.com</a
+      >!
+      <span class="green-text"
+        >Please use the <a href="contact.html">contact page</a> to let me know
+        if you would like to see this program receive updates.</span
+      >
+    </p>
+
+    <h2>Screenshots</h2>
+    <!--TODO: Add screenshots here-->
+
+    <h2>Features</h2>
+    <ul>
+      <li>100% spyware and malware free</li>
+      <li>Free for personal, educational, or corporate use</li>
+      <li>Easy to use</li>
+      <li>Great learning resource</li>
+      <li>Great for many different subjects</li>
+      <li>
+        Shortcuts to insert squared, cubed, square root, and plus minus symbols
+      </li>
+      <li>Spell check cards with Word 2003 and 2007</li>
+      <li>Export to comma delimited text files</li>
+      <li>Free email support</li>
+      <li>Automatic and manual check for updates</li>
+      <li>Keeps card scores and view a graph of these scores</li>
+      <li>Error Reporting</li>
+      <li>Random number generation in card question/answers</li>
+      <li>Support for multiple choice answers</li>
+      <li>Search for phrase and replace all functions</li>
+      <li>Easy to make portable</li>
+      <li>View detailed test/study mode results</li>
+      <li>
+        Many different options for test/study order including: random, reverse
+        order, lowest to highest card score, highest to lowest card score, or in
+        order
+      </li>
+      <li>
+        Ability to create study only mode sets that keep detailed record of the
+        study results
+      </li>
+      <li>Request any additional features you would like to see</li>
+    </ul>
+
+    <h2>System Requirements</h2>
+    <ul>
+      <li>This software is designed to be run on Microsoft Windows</li>
+      <li>
+        This software requires the .NET framework version 2.0. If you are
+        running Windows Vista or later then you shouldn't need to worry about
+        installing the .NET framework
+      </li>
+    </ul>
+
+    <h2>Download</h2>
+    <p>Download the installer or the portable version.</p>
+    <!--TODO: Add table with download info and links, including showing previous versions when show previous versions button is pressed-->
+    <button>Show Previous Versions</button>
+
+    <h2>Version Naming Convention:</h2>
+    <p>The program version 1.2.3.4 is changed as follows:</p>
+    <ol>
+      <li>
+        Changed when the file version is updated. For example, files saved with
+        version 2.x.x.x cannot be opened by version 1.x.x.x of the program.
+      </li>
+      <li>Changed when new features are added or improved.</li>
+      <li>
+        Changed only when program errors (bugs) are fixed and/or minor
+        improvements are made.
+      </li>
+      <li>
+        Changed only when slight changes are made that will not affect most
+        people.
+      </li>
+    </ol>
+
+    <!--TODO: Add version history details for the rest of the versions-->
+    <h2>Version History</h2>
+    <ul>
+      <li>
+        Version 2.2.0.0 (5-4-11)
+        <ul>
+          <li>Added: The ability to test/study in reverse card order</li>
+          <li>
+            Fixed: Clicking the red x on the test/study form would close the
+            form without showing the summary form
+          </li>
+          <li>
+            Added: The ability to specify card number when creating/editing a
+            card
+          </li>
+          <li>
+            Added: Test/Study mode results with exact cards correct, wrong, and
+            skipped
+          </li>
+          <li>
+            The ability to print in reverse card order and display the final
+            print card order for easy reproduction of random card order
+          </li>
+          <li>
+            Added: Sets that can only be used in Test/Study mode that store
+            detailed score info along with user provided name/ID in a password
+            protected manner
+          </li>
+        </ul>
+      </li>
+      <li>Version 2.1.0.0 (2-16-11)</li>
+      <li>Version 2.0.0.0 (1-3-11)</li>
+      <li>Version 1.2.1.0 (11-5-09)</li>
+      <li>Version 1.2.0.0 (10-21-09)</li>
+      <li>Version 1.1.0.0 (10-6-09)</li>
+      <li>Version 1.0.2.0</li>
+      <li>Version 1.0.1.0</li>
+    </ul>
 
     <footer>
       <span>Copyright © 2019 Discovery Byte.</span>
