--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
         <a href="http://www.freewarefiles.com" target="_blank"
           >FreewareFiles.com</a
         >
-        - A collections of free software in many different categories.
+        - A collection of free software in many different categories.
       </li>
       <li>
         <a href="http://www.freedownloadaday.com" target="_blank"
