Added previous versions to downloads table Enabled button to show previous versions in downloads table

--- a/Discovery_Flashcards.html
+++ b/Discovery_Flashcards.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Discovery Byte Website: Discovery Flashcards</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="scripts/Discovery_Flashcards.js"></script>
   </head>
 
   <body>
@@ -207,10 +208,181 @@
           SHA1=2eacd6524fbb3faa84c9207767aa95fa0090714c
         </td>
       </tr>
+      <tr class="previous-version">
+        <td>2.1.0.0</td>
+        <td>02/16/11</td>
+        <td>1.70 MB</td>
+        <td>Zipped Installer</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_setup_2.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=bf0c29f52bd8426e434d37b1b92bf942<br />
+          SHA1=3ec27ba1c388d9044cb7e4804398c593c8d822a6
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>2.1.0.0</td>
+        <td>02/16/11</td>
+        <td>1.49 MB</td>
+        <td>Portable Zip File</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_Portable_2.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=ce147ce4369852e9ef9f4f9531a642b4<br />
+          SHA1=15b7a407a9eea32fc5a563757513def50d8c9c1f
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>2.0.0.0</td>
+        <td>01/03/11</td>
+        <td>1.67 MB</td>
+        <td>Zipped Installer</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_setup_2.0.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=c89025bc09f3be88332060696a1ca54e<br />
+          SHA1=f7a40da0cad4edb7d668052d348e2955a739ff6a
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>2.0.0.0</td>
+        <td>01/03/11</td>
+        <td>1.44 MB</td>
+        <td>Portable Zip File</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_Portable_2.0.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=06d640b11e1e61ff23214b18288efef9<br />
+          SHA1=b14003c2078485da81917f733cc6383e28990023
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.2.1.0</td>
+        <td>11/05/09</td>
+        <td>2.17 MB</td>
+        <td>Zipped Installer</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_setup_1.2.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=63c65b9b2e8cf8e6c4cf87dd826569e5<br />
+          SHA1=268ccc917a99b10c1de18b69f292b8f0899f81f1
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.2.1.0</td>
+        <td>11/05/09</td>
+        <td>2.01 MB</td>
+        <td>Portable Zip File</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_Portable_1.2.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=b98315fd362e3192a461ad6324b61c53<br />
+          SHA1=a485c9e58052d2671e43188174a40fd64296dbaa
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.2.0.0</td>
+        <td>10/21/09</td>
+        <td>2.04 MB</td>
+        <td>Zipped Installer</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_setup_1.2.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=eba776a59812320fb4dc296899cad706<br />
+          SHA1=92d409c15f1e76cd253cd7613d261c9e3bebb998
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.2.0.0</td>
+        <td>11/21/09</td>
+        <td>1.88 MB</td>
+        <td>Portable Zip File</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_Portable_1.2.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=de81f41157bc45950d47bf8f7f92f009<br />
+          SHA1=8fa26fa7a391ed2af7976996e6a4b87dcf8caa46
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.1.0.0</td>
+        <td>10/06/09</td>
+        <td>1.21 MB</td>
+        <td>Zipped Installer</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_setup_1.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=56eb5168c3b78252c6e109e53dc86b27<br />
+          SHA1=6e735cd1b3d9061b87d7d728a9d3c1b42ff074e0
+        </td>
+      </tr>
+      <tr class="previous-version">
+        <td>1.1.0.0</td>
+        <td>10/06/09</td>
+        <td>1.06 MB</td>
+        <td>Portable Zip File</td>
+        <td>
+          <a
+            class="download-btn"
+            href="downloads/Discovery_FlashCards_Portable_1.1.zip"
+            >Download</a
+          >
+        </td>
+        <td>
+          MD5=f2e61b1f267cb1992aecb29117eaaf9e<br />
+          SHA1=9d9e006494b8ca432d628d3bbeb716c2909b7974
+        </td>
+      </tr>
     </table>
 
-    <!--TODO: Enable show previous versions button and show previous versions in the table when the button is pressed. Maybe make it a checkbox instead of a button-->
-    <button disabled="true">Show Previous Versions</button>
+    <button id="show-previous-versions-btn" onclick="showPreviousVersions()">
+      Show Previous Versions
+    </button>
 
     <h2>Version Naming Convention:</h2>
     <p>The program version 1.2.3.4 is changed as follows:</p>
